--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,8 +31,8 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: Multigh-env
-          environment_name: Multighenv-env
+          application_name: multi-docker
+          environment_name: Multidocker-env-1
           existing_bucket_name: elasticbeanstalk-us-east-1-487093551829
           region: us-east-1
           version_label: ${{ github.sha }}
